# Web_HW_2

./: Dockerfile  pyproject.toml  requirements.txt
BotAssistant/: LICENSE  birthday_n_days.py  bot_work.py  fields.py  main.py  my_exception.py  notes_book.py  person.py  pyproject.toml
BotAssistant/botassistant/: address_book.py  bot_work.py  clean.py  console_view.py  contact_book.py  fields.py  main.py  note_book.py  notes_book.py  person.py  view.py
