[tool.poetry]
name = "botassistant"
version = "0.1.0"
description = ""
authors = ["Max <maxkryvytskyiwork@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
recordbook = "recordbook.main:main"